Some changes to the contact files

--- a/news.html
+++ b/news.html
@@ -60,7 +60,8 @@
  <h4>Update 1.1</h4>
  <p>This update is for the completed admin command and password for admin comments and actions in the contact page. Some of the bugs with the comments are also fixed.</p>
  
- 
+ <h4>Updates 1.2</h4>
+ <p>This update is for the boarder of the Admin comments. This is for the people to know what comments are made by the Admins. The boarder of the Admin is also going to change into an image.</p>
  <!--Copyright at the bottom of the page-->
  
  <div class="copyr">
